Cambio total de CSS con Grid y animaciones

--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
                 <li><a href="./pages/noticias.html">Noticias</a> </li>
             </ul>
         </nav>
-        <!--<div class="boton-noticia"> 
-            <a href="./pages/noticias.html">NOTICIAS</a>
-        </div> -->
         <div class="header__iRedes" data-aos="fade-up"
         data-aos-duration="3000">
             <img src="./assets/img/lupa.png" alt="busqueda">
@@ -80,8 +77,8 @@
     <footer class="footer">
         
             <div class="footer__consultas">
-                <h3 data-aos="zoom-in">CONSULTAS E INFORMES</h3>
-                <h4 data-aos="zoom-in">Contacta con nosotros</h4>
+                <h3>CONSULTAS E INFORMES</h3>
+                <h4>Contacta con nosotros</h4>
                 <p class="footer__slogan">Juntos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y Crédito
                 </p>
                 <div class="footer__btn">
