--- a/11mbootstrap/pages/nosotros.html
+++ b/11mbootstrap/pages/nosotros.html
@@ -11,7 +11,7 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/styleb.css">
-    <title>Servicios</title>
+    <title>Nosotros</title>
 </head>
 
 <body>
@@ -55,24 +55,46 @@
 
         <!-- Nosotros -->
         <!-- titulo -->
+        <div class="container-fluid bg-secondary">
+            <div class="justify-content-center p-1" data-aos="zoom-in">
+                <h1 class="nosotros_titulo">Nosotros</h1>
+            </div>
+        </div>
+        <div class="container-fluid align-items-center">
+            <div class="row bg-secondary justify-content-center align-items-center p-3" data-aos="zoom-in">
+                <div class="imgfoto col col-sm-12 col-md-6 col-lg-5 p-2">
+                    <img class src="../assets/img/imagen_nosotros.png" alt="imgnosotros">
+                </div>
+                <div class="col-none col-sm-12 col-md-6 col-lg-7 p-2 text-center" data-aos="zoom-in">
+                    <p class="text-white bg-danger p-2">Somos la organización que representa a gremio mas grande de
+                        Ahorro y Crédito de manera
+                        eficiente y oportuna, identificando, desarrollando y administrando servicios de interés común,
+                        que
+                        promuevan y consoliden el liderazgo del Sistema en la industria micro-financiera.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <!--         
         <div class="nosotros container-fluid">
             <div class="justify-content-center" data-aos="zoom-in">
                     <h1 class="nosotros_titulo text-danger p-3">Nosotros</h1>
             </div>
-            <!-- Tarjetas -->
-            <div class="container-fluid">
-                <div class="row nosotrost justify-content-center col-none col-sm-12" data-aos="zoom-in">
+            Tarjetas -->
+        <!-- <div class="container-fluid">
+                <div class="row nosotrost justify-content-center col-none col-sm-12 col-md-4" data-aos="zoom-in">
                     <div class="nosotros_con m-1 col" >
                         <img src="../assets/img/imagen_nosotros.png" alt="imgnosotros">
                     </div>
-                    <div class="nosotros__con m-1 bg-danger col col-sm-12" data-aos="zoom-in">
+                    <div class="nosotros__con m-1 bg-danger col col-sm-12 col-md-8" data-aos="zoom-in">
                         <p>Somos la organización que representa a gremio mas grande de Ahorro y Crédito de manera
                             eficiente y oportuna, identificando, desarrollando y administrando servicios de interés común, que
                             promuevan y consoliden el liderazgo del Sistema en la industria micro-financiera.</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  -->
     </main>
     <!-- END HEADER -->
     <!-- FOOTER -->
