--- a/11mbootstrap/pages/contacto.html
+++ b/11mbootstrap/pages/contacto.html
@@ -6,52 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <title>Contacto</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../assets/css/styleb.css">
+    <title>Servicios</title>
 </head>
 
-<body class="contenedor">
-    <header class="header">
-        <div class="header__logo">
-            <a href="../index.html"><img class="header__logo--img" data-aos="zoom-in" src="../assets/img/logo-fepcmac-blanco.webp" alt="Logo"></a>    
-        </div>
-        <nav class="header__navBar" data-aos="fade-down"
-        data-aos-easing="linear"
-        data-aos-duration="1500">
-            <ul>
-                <li><a href="../pages/servicios.html">Servicios</a> </li>
-                <li><a href="../pages/nosotros.html">Nosotros</a> </li>
-                <li><a href="../pages/contacto.html">Contacto</a> </li>
-                <li><a href="../pages/noticias.html">Noticias</a> </li>
-            </ul>
+<body>
+    <div class="container-fluid">
+        <!-- Barra de navegacion -->
+        <nav class="navbar navbar-expand-md navbar-light bg-danger ">
+            <div class="container-fluid">
+                <a href="../index.html" class="navbar-brand"><img class="imglogo"
+                        src="../assets/img/logo-fepcmac-blanco.png" alt="logo"></a>
+
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegacion">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div id="menuNavegacion" class="bmenu collapse navbar-collapse justify-content-center">
+                    <ul class="navbar-nav ms-3">
+                        <li class="nav-item"><a class="nav-link menu" href="../pages/servicios.html">SERVICIOS</a></li>
+                        <li class="nav-item"><a class="nav-link menu" href="../pages/nosotros.html">NOSOTROS</a></li>
+                        <li class="nav-item"><a class="nav-link menu" href="../pages/contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                <div container="container-fluid">
+                    <!--< icono lupa">-->
+                    <i class="bi bi-search text-white p-1"></i>
+                    <!--Icono Facebook-->
+                    <i class="bi bi-facebook text-white p-1"></i>
+                    <!-- icono linkedin-->
+                    <i class="bi bi-linkedin text-white p-1"></i>
+                    <!-- icono youtube -->
+                    <i class="bi bi-youtube text-white p-1"></i>
+                </div>
+            </div>
         </nav>
-        <!--<div class="boton-noticia"> 
-            <a href="./pages/noticias.html">NOTICIAS</a>
-        </div> -->
-        <div class="header__iRedes" data-aos="fade-up"
-        data-aos-duration="3000">
-            <img src="../assets/img/lupa.png" alt="busqueda">
-            <img src="../assets/img/facebook (1).png" alt="facebook">
-            <img src="../assets/img/linkedin (1).png" alt="linkedin">
-            <img src="../assets/img/youtube (1).png" alt="youtube">
-        </div>
-    </header>
+    </div>
     <!-- END HEADER -->
+
     <!-- MAIN -->
-    <main class="main">
+    <main class="container-fluid">
         <!-- MAIN banner -->
-        <div class="seccion__banner" data-aos="fade-down"
-        data-aos-easing="linear"
-        data-aos-duration="1500">
+        <div class="banner_inicio" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
             <img class="seccion__banner--img" src="../assets/img/Banner_contacto.png" alt="banner">
         </div>
         <!-- MAIN Titulo -->
-        <section class="nosotros">
-            <div class="nosotros__titulo">
+        <section class="container-fluid">
+            <div class="nosotros_titulo">
                 <h1>Contacto</h1>
             </div>
             <!-- MAIN contenido -->
-            <div class="contacto">
+            <div class="container-fluid p-3">
+                <form>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo Electronico</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="tel" class="form-label">Telefono</label>
+                        <input type="text" class="form-control" id="tel">
+                    </div>
+                    <div class="mb-3">
+                        <label for="comentario" class="form-label">Comentario</label>
+                        <textarea class="form-control" id="comentario" rows="3"></textarea>
+                    </div>
+
+                    <button type="submit" class="btn btn-danger">Submit</button>
+                </form>
+            </div>
+            <!-- <div class="contacto">
                 <div class="contacto__contenido">
                     <img class="contacto__contenido--img" data-aos="zoom-in" src="../assets/img/imagen_contacto.png" alt="imgnosotros">
                 </div>
@@ -78,34 +108,48 @@
                 </div>
                 </form>
             </div>
-            </div>
+            </div> -->
         </section>
     </main>
     <!-- FOOTER-->
-    <footer class="footer">
-
-        <div class="footer__consultas">
-            <h3>CONSULTAS E INFORMES</h3>
-            <h4>Contacta con nosotros</h4>
-            <p class="footer__slogan">Juntos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y Crédito
-            </p>
-            <div class="footer__btn">
-                <p>CONTACTANOS -></p>
+    <footer class="container-fluid">
+        <div class="container-fluid">
+            <div class="row bg-danger p-2">
+                <div class="texto_f col-none col-md-6 col-lg-6 pb-3">
+                    <h4 class="text-white">CONSULTAS E INFORMES</h4>
+                    <h2 class="text-secondary">Contacta con nosotros</h2>
+                    <p class="text-white">Juan tos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y
+                        Credito</p>
+                    <a class="btn_nosotros_a bg-white p-3 rounded" href="./pages/contacto.html"> CONTACTANOS</a>
+                </div>
+                <div class="footer_redes col col-md-6 col-lg-6 d-flex align-items-center justify-content-center">
+                    <!--< icono lupa">-->
+                    <i class="bi bi-search text-white"></i>
+                    <!--Icono Facebook-->
+                    <i class="bi bi-facebook text-white"></i>
+                    <!-- icono linkedin-->
+                    <i class="bi bi-linkedin text-white"></i>
+                    <!-- icono youtube -->
+                    <i class="bi bi-youtube text-white"></i>
+                </div>
             </div>
-        </div>
-        <div class="footer__redes">
-            <img src="../assets/img/lupa.png" alt="busqueda">
-            <img src="../assets/img/facebook (1).png" alt="facebook">
-            <img src="../assets/img/linkedin (1).png" alt="linkedin">
-            <img src="../assets/img/youtube (1).png" alt="youtube">
-        </div>
 
+
+
+
+
+        </div>
     </footer>
-    <!-- END FOOTER -->
+
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
