--- a/11mbootstrap/pages/servicios.html
+++ b/11mbootstrap/pages/servicios.html
@@ -29,7 +29,7 @@
                     <ul class="navbar-nav ms-3">
                         <li class="nav-item"><a class="nav-link menu" href="../pages/servicios.html">SERVICIOS</a></li>
                         <li class="nav-item"><a class="nav-link menu" href="../pages/nosotros.html">NOSOTROS</a></li>
-                        <li class="nav-item"><a class="nav-link menu" href="../pages/servicios.html">CONTACTO</a></li>
+                        <li class="nav-item"><a class="nav-link menu" href="../pages/contacto.html">CONTACTO</a></li>
                     </ul>
                 </div>
                 <div container="container-fluid">
@@ -109,11 +109,6 @@
                     <i class="bi bi-youtube text-white"></i>
                 </div>
             </div>
-
-
-
-
-
         </div>
     </footer>
 
