--- a/11mbootstrap/pages/servicios.html
+++ b/11mbootstrap/pages/servicios.html
@@ -15,36 +15,42 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <!-- Barra de navegacion -->
-        <nav class="navbar navbar-expand-md navbar-light bg-danger ">
-            <div class="container-fluid">
-                <a href="../index.html" class="navbar-brand"><img class="imglogo"
-                        src="../assets/img/logo-fepcmac-blanco.png" alt="logo"></a>
+    <header>
+        <div class="container-fluid">
+            <!-- Barra de navegacion -->
+            <nav class="navbar navbar-expand-md navbar-light bg-danger">
+                <div class="container-fluid">
+                    <a href="../index.html" class="navbar-brand"><img class="imglogo"
+                            src="../assets/img/logo-fepcmac-blanco.png" alt="logo"></a>
 
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menuNavegacion">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="menuNavegacion" class="bmenu collapse navbar-collapse justify-content-center">
-                    <ul class="navbar-nav ms-3">
-                        <li class="nav-item"><a class="nav-link menu" href="../pages/servicios.html">SERVICIOS</a></li>
-                        <li class="nav-item"><a class="nav-link menu" href="../pages/nosotros.html">NOSOTROS</a></li>
-                        <li class="nav-item"><a class="nav-link menu" href="../pages/contacto.html">CONTACTO</a></li>
-                    </ul>
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse"
+                        data-bs-target="#menuNavegacion">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="menuNavegacion" class="bmenu collapse navbar-collapse justify-content-center">
+                        <ul class="navbar-nav ms-3">
+                            <li class="nav-item"><a class="nav-link menu" href="../pages/servicios.html">SERVICIOS</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link menu" href="../pages/nosotros.html">NOSOTROS</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link menu" href="../pages/contacto.html">CONTACTO</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div container="container-fluid">
+                        <!--< icono lupa">-->
+                        <i class="iredes bi bi-search p-1"></i>
+                        <!--Icono Facebook-->
+                        <i class="iredes bi bi-facebook p-1"></i>
+                        <!-- icono linkedin-->
+                        <i class="iredes bi bi-linkedin p-1"></i>
+                        <!-- icono youtube -->
+                        <i class="iredes bi bi-youtube p-1"></i>
+                    </div>
                 </div>
-                <div container="container-fluid">
-                    <!--< icono lupa">-->
-                    <i class="bi bi-search text-white p-1"></i>
-                    <!--Icono Facebook-->
-                    <i class="bi bi-facebook text-white p-1"></i>
-                    <!-- icono linkedin-->
-                    <i class="bi bi-linkedin text-white p-1"></i>
-                    <!-- icono youtube -->
-                    <i class="bi bi-youtube text-white p-1"></i>
-                </div>
-            </div>
-        </nav>
-    </div>
+            </nav>
+        </div>
+    </header>
     <!-- END HEADER -->
     <!-- MAIN -->
     <main class="main container-fluid">
@@ -100,13 +106,13 @@
                 </div>
                 <div class="footer_redes col col-md-6 col-lg-6 d-flex align-items-center justify-content-center">
                     <!--< icono lupa">-->
-                    <i class="bi bi-search text-white"></i>
+                    <i class="iredesf bi bi-search"></i>
                     <!--Icono Facebook-->
-                    <i class="bi bi-facebook text-white"></i>
+                    <i class="iredesf bi bi-facebook"></i>
                     <!-- icono linkedin-->
-                    <i class="bi bi-linkedin text-white"></i>
+                    <i class="iredesf bi bi-linkedin"></i>
                     <!-- icono youtube -->
-                    <i class="bi bi-youtube text-white"></i>
+                    <i class="iredesf bi bi-youtube"></i>
                 </div>
             </div>
         </div>
