carrusel parcial index

--- a/11mbootstrap/pages/contacto.html
+++ b/11mbootstrap/pages/contacto.html
@@ -96,7 +96,7 @@
                 <div class="texto_f col-none col-md-6 col-lg-6 pb-3">
                     <h4 class="text-white">CONSULTAS E INFORMES</h4>
                     <h2 class="text-secondary">Contacta con nosotros</h2>
-                    <p class="text-white">Juan tos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y
+                    <p class="text-white">Juntos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y
                         Credito</p>
                     <a class="btn_nosotros_a bg-white p-3 rounded" href="./pages/contacto.html"> CONTACTANOS</a>
                 </div>
