--- a/11mbootstrap/index.html
+++ b/11mbootstrap/index.html
@@ -27,7 +27,8 @@
                         data-bs-target="#menuNavegacion">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div id="menuNavegacion" class="bmenu collapse navbar-collapse justify-content-center align-items-center">
+                    <div id="menuNavegacion"
+                        class="bmenu collapse navbar-collapse justify-content-center align-items-center">
                         <ul class="navbar-nav ms-3">
                             <li class="nav-item"><a class="nav-link menu" href="./pages/servicios.html">SERVICIOS</a>
                             </li>
@@ -52,9 +53,45 @@
     <!-- Main Header -->
     <main class="container-fluid">
         <!-- Grafica Banner -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../assets/img/Banner1.jpg" class="d-block w-100" alt="Banner1">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Banner2.jpg" class="d-block w-100" alt="Banner2">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Banner3.jpg" class="d-block w-100" alt="Banner3">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/img/Banner4.jpg" class="d-block w-100" alt="Banner4">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- Banner anterior 
         <div class="banner_inicio">
             <img src="./assets/img/banner_inicio.png" alt="">
-        </div>
+        </div>-->
         <!-- Grafica slogan y boton nosotros -->
         <div class="container-fluid">
             <div class="slogan row d-flex justify-content-center align-items-center bg-danger text-white">
@@ -92,7 +129,7 @@
                 <div class="texto_f col-none col-md-6 col-lg-6 pb-3">
                     <h4 class="text-white">CONSULTAS E INFORMES</h4>
                     <h2 class="text-secondary">Contacta con nosotros</h2>
-                    <p class="text-white">Juan tos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y
+                    <p class="text-white">Juntos impulsaremos el desarrollo de las Cajas Municipales de Ahorro y
                         Credito</p>
                     <a class="btn_nosotros_a bg-white p-3 rounded" href="./pages/contacto.html"> CONTACTANOS</a>
                 </div>
